Add message event, little fixes

--- a/src/data/exampleconfig.json
+++ b/src/data/exampleconfig.json
@@ -1,6 +1,9 @@
 {
   "prefix": "!",
   "clientOptions": {
+    "allowedMentions": {
+      "repliedUser": false
+    },
     "intents": [
       "GUILDS",
       "GUILD_MESSAGES"
