--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "nodemon -e js"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "discord.js": "^13.4.0",
     "dotenv": "^10.0.0"
   }
